--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "chalk": "^4.1.2",
     "express": "^4.19.2",
-    "log4js": "^6.9.1",
-    "prom-client": "^15.1.3"
+    "http-status-codes": "^2.3.0",
+    "morgan": "^1.10.0",
+    "prom-client": "^15.1.3",
+    "winston": "^3.13.0"
   }
 }
