--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 9090:9090
     command: "--config.file=/etc/prometheus/prometheus.yaml"
     volumes:
-      - ./prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml:ro
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yaml:ro
       - prometheus-data:/prometheus
     restart: unless-stopped
   grafana:
@@ -25,14 +25,22 @@ services:
     volumes:
       - grafana-data:/var/lib/grafana
     restart: unless-stopped
+  elasticsearch:
+    image: elasticsearch:8.8.0
+    ports:
+      - 9200:9200
+      - 9300:9300
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
   app:
     image: node:20
     volumes:
-      - ./app:/app
+      - .:/app
     ports:
       - 3010:3010
     working_dir: /app
-    command: node index.js
+    command: npm start
 
 networks:
   default:
