--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.14.0",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
     "prom-client": "^15.1.3",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "winston-elasticsearch": "^0.19.0"
   }
 }
